# fcitx5-lotus

./: .all-contributorsrc  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  INSTALL.md  Messages.sh  README.en.md  README.md  flake.nix  org.fcitx.Fcitx5.Addon.Lotus.metainfo.xml.in  org.fcitx.Fcitx5.Addon.Vmk.metainfo.xml.in  translate.sh  update_translate.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  packaging-dev.yml  packaging-release.yml  packaging.yml  ubuntu-dev-build.yml  ubuntu-release-build.yml
bamboo/: bamboo  bamboo-c.go
config-editor/: CMakeLists.txt  editor.cpp  editor.h  main.cpp  main.h
data/: CMakeLists.txt
data/emoji/: EMOJI_GUIDE.md
fcitx5-vmk/src/: vmk.cpp
keymap-editor/: editor.cpp
lotus-editor/: CMakeLists.txt  editor.cpp  editor.h  lotus-editor.json  main.cpp  main.h
misc/: CMakeLists.txt  fcitx5-lotus-server@.service  user-lotus.conf
nix/modules/nixos/fcitx5-lotus/: default.nix
obj-x86_64-linux-gnu/bamboo/: bamboo-core.h
obj-x86_64-linux-gnu/server/: fcitx5-lotus-server
obj-x86_64-linux-gnu/settings-gui/: fcitx5-lotus-settings  org.fcitx.Fcitx5.Addon.Lotus.Settings.desktop  version.py
obj-x86_64-linux-gnu/src/: lotus-addon.conf  lotus-addon.conf.in  lotus.conf
packaging/debian/: changelog  control  postinst
packaging/rpm/fedora/: fcitx5-lotus.spec
packaging/rpm/opensuse/: fcitx5-lotus.spec
po/: CMakeLists.txt  fcitx5-lotus.pot  fcitx5-vmk.pot  vi.po
server/: .gitignore  CMakeLists.txt  lotus-server.cpp  lotus-server.h
settings-gui/: CMakeLists.txt  dbus_handler.py  fcitx5-lotus-settings  i18n.py  lotus_settings.py  main.py  org.fcitx.Fcitx5.Addon.Lotus.Settings.desktop  org.fcitx.Fcitx5.Addon.Lotus.Settings.desktop.in  version.py.in
settings-gui/core/: dbus_handler.py  file_handler.py
settings-gui/ui/: components.py  main_window.py  style.qss
settings-gui/ui/pages/: about.py  base_editor.py  dict_editor.py  dynamic_settings.py  keymap_editor.py  macro_editor.py  mode_manager.py
src/: .gitignore  CMakeLists.txt  ack-apps.h  emoji.cpp  emoji.h  lotus-addon.conf.in.in  lotus-candidates.cpp  lotus-candidates.h  lotus-clipboard.cpp  lotus-clipboard.h  lotus-config.h  lotus-engine.cpp  lotus-engine.h  lotus-monitor.cpp  lotus-monitor.h  lotus-state.cpp  lotus-state.h  lotus-utils.cpp  lotus-utils.h  lotus.conf.in  lotus.cpp  lotus.h  vmk.cpp
